BUG: When entering/modifying a QSO thre is an error related to awarddxcc table not existing

TODO: Update the DB (modes table) updateToLatest() => updateTo026
WIP: Try to optimize bool DataProxy_SQLite::fillEmptyDXCCInTheLog()
WIP: Working in the update of the table awarddxcc in DB class
WIP: - Bugfix: DB in alternative locations was not always found. (WIP #706)

TESTS to do during RC releases:
- ADIF log Import
- LoTW log Import
- Edit QSO. Check how data comes from DB to the UI.
    - Attention to name
- CompleteWithPreviousQSO: Test that the following fields are reused:
    - name
    - QTH
    - GridSquare
    - IOTA
    - QSLVia

- Receive QSOs from WSJTX:
    - check if they are properly imported to the log.
    - Test a dupe QSO, a message should be shown

TEST
Close:  #396, #507, #508


TBD - 2.4
- Enhancement: Ported from Qt5 to Qt6.
- Enhancement: Refactoring of several classes.
- Enhancement: SQLi protection of some queries.
- Enhancement: Improve how the cty.csv file (countries file) is read.
- Enhancement: Update the entities table to make UTC real instead of int (e.g. India is -5.5 UTC)
- Enhancement: Function to import QSOs from WSJTX.
- Enhancement: Added all the modes/submodes of ADIF 3.1.4
- Enhancement: Added many tests to test code before releasing.
- Enhancement: ADIF Added SUBMM band.
- Enhancement: Added several ADIF fields (Closes #396, #507, #508, #719)
- BugFix: Fixed the ISO name for Togo.
- BugFix: Country fix read failed with complex prefixes.
- Bugfix: CQ & ITU zones may be wrong for callsigns from specific DXCC if coming from WSJTX.
- Bugfix: ClubLog date was not properly managed.
- Translations: Dutch (TNX PA3FNT), Spanish (EA4K)

- Removed the message against the Russian invasion of Ukraine. No specific reason for this removal.
  Just I don't feel that it is useful.


Mar 2024 - 2.3.4
- BugFix: After Editing a QSO, lotw_qsl_rcvd is emptied (Closes #656, #659) (TNX N6PAZ, EA5WA)